8215487: ZGC: ZRuntimeWorkers incorrectly identify themselves as ZWorkers

Reviewed-by: eosterlund