src/hotspot/share/gc/z/zThread.hpp
@@ -29,6 +29,8 @@
 
 class ZThread : public AllStatic {
   friend class ZTask;
+  friend class ZWorkersInitializeTask;
+  friend class ZRuntimeWorkersInitializeTask;
 
 private:
   static __thread bool      _initialized;
@@ -36,6 +38,7 @@ private:
   static __thread bool      _is_vm;
   static __thread bool      _is_java;
   static __thread bool      _is_worker;
+  static __thread bool      _is_runtime_worker;
   static __thread uint      _worker_id;
 
   static void initialize();
@@ -45,6 +48,9 @@ private:
       initialize();
     }
   }
+
+  static void set_worker();
+  static void set_runtime_worker();
 
   static bool has_worker_id();
   static void set_worker_id(uint worker_id);
@@ -71,6 +77,11 @@ public:
   static bool is_worker() {
     ensure_initialized();
     return _is_worker;
+  }
+
+  static bool is_runtime_worker() {
+    ensure_initialized();
+    return _is_runtime_worker;
   }
 
   static uint worker_id() {
